# s3-browser

./: cli.py  pyproject.toml
client/: components.json  package-lock.json  (+1 more)
server/: .gitignore  pyproject.toml
server/src/browser/: run.py
server/src/browser/application/buckets/: create.py  read.py
server/src/browser/application/common/gateway/: s3_bucket_gateway.py  s3_connection_manager.py  s3_connection_settings_gateway.py  s3_objects_gateway.py  uow.py
server/src/browser/application/exceptions/: base.py  s3_connection.py  uow.py
server/src/browser/application/objects/: delete.py  dto.py  read.py  read_url.py  upload.py
server/src/browser/application/s3_connections/: create.py  read.py  restore.py
server/src/browser/application/s3_settings/: create.py  delete.py  read.py  update.py
server/src/browser/bootstrap/: app_factory.py
server/src/browser/bootstrap/config/: app.py  logs.py  sqlite.py
server/src/browser/bootstrap/ioc/: application.py  infrastructure.py  provider_registry.py  settings.py
server/src/browser/common/: helpers.py
server/src/browser/domain/entity/: s3_bucket.py  s3_connection_config.py  s3_connection_settings.py
server/src/browser/domain/exception/: s3_setting.py
server/src/browser/infrastructure/: config_loader.py
server/src/browser/infrastructure/exceptions/: base.py  s3.py
server/src/browser/infrastructure/persistence/: __init__.py  uow.py
server/src/browser/infrastructure/s3/: s3_connection_manager.py
server/src/browser/presentation/: cors.py
server/src/browser/presentation/controllers/: root_router.py
(+37 files in other folders)
