[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.7.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "botocore>=1.43.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.48.0",
]
