[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "aiobotocore==2.16.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "typer>=0.26.2",
    "uuid6>=2025.0.1",
    "uvicorn>=0.48.0",
]
